--- a/static/src/stylesheets/index.less
+++ b/static/src/stylesheets/index.less
@@ -231,7 +231,7 @@
         top:105px;
         right: 0;
         width: 155px;
-        overflow: hidden;
+        overflow-x: scroll;
         z-index: 9;
         ul{
             overflow:hidden;
@@ -304,5 +304,10 @@
                 }
             }
         }
+    }
+}
+.appPage{
+    .bgImg{
+        width: 100%;
     }
 }
